--- a/playbook.yml
+++ b/playbook.yml
@@ -1,12 +1,11 @@
 # Based on "Deep Learning with R", appendix B (how to configure RStudio
 # Server on AWS)
-# Note
 - name: Install RStudio Server and Keras on Ubuntu
   hosts: all
   become: yes
 
   tasks:
-    - name: Add apt key for r-base
+    - name: Add Ubuntu server apt key
       apt_key:
         id: E084DAB9
         keyserver: keyserver.ubuntu.com
@@ -17,7 +16,17 @@
         repo: deb http://cran.rstudio.com/bin/linux/ubuntu bionic-cran35/
         state: present
 
-    - name: Install R base package
+    - name: Install r-base package
       apt:
+        # TODO: install specific version to make the environment reproducible
         name: r-base
         update_cache: yes
+
+    - name: Ensure gdebi is installed
+      apt:
+        name: gdebi
+
+    - name: Install rstudio-server
+      apt:
+        # Install specific version to make the environment reproducible
+        deb: https://download2.rstudio.org/rstudio-server-1.1.456-amd64.deb
